fixed icon misalignment on about page

--- a/src/styles/pages/about.css
+++ b/src/styles/pages/about.css
@@ -35,14 +35,22 @@ i {
 }
 .icon-box {
 	display: flex;
-	/* grid-template-columns: 1fr 1fr 1fr;
-	gap: 10px; */
+	
+	
 }
-a {
-	background-color: rgba(255, 248, 232, 0.96);
+.icon {
+
 	border-radius: 50%;
 	margin-top: 10px;
+	height: 50px;
+	width: 50px;
+	background-color: rgba(255, 248, 232, 0.96);
+	display: flex;
+	justify-content: center;
+  	align-items: center;
+  	margin: 10px
 }
+
 
 h3 {
 	margin-bottom: 15px;
